# shared_buffers

./: BufferException.cpp  BufferException.h  CMakeLists.txt  MyProcess.cpp  MyProcess.h  README.md  SharedCharBuffer.cpp  SharedCharBuffer.h  main.cpp  types.cpp  types.h
buffers/: BufferException.h  DoubleNestedCharBuffer.cpp  DoubleNestedCharBuffer.h  DoubleSharedBuffer.cpp  DoubleSharedBuffer.h  DoubleSharedBufferT.cpp  DoubleSharedBufferT.h  DoubleSharedCharBuffer.cpp  DoubleSharedCharBuffer.h  SharedBuffer.cpp  SharedBuffer.h  SharedBufferT.cpp  SharedBufferT.h  SharedCharBuffer.cpp  SharedCharBuffer.h  SingleSharedBuffer.cpp  SingleSharedBuffer.h
example_apps/: README.md  SimpleExamples.cpp  SimpleExamples.h
example_apps/animal_name_translator/: ANGenerator.cpp  ANGenerator.h  ANReceiver.cpp  ANReceiver.h  ANTranslator.cpp  ANTranslator.h  AnimalNameGenerator.cpp  AnimalNameGenerator.h  AnimalNames.h  README.md  appMain.cpp
example_apps/animal_name_translator/comparison/: ANComparison.cpp  ANComparison.h
example_apps/animal_name_translator/double_buf/: ANGeneratorDB.cpp  ANGeneratorDB.h  ANReceiverDB.cpp  ANReceiverDB.h  ANTranslatorDB.cpp  ANTranslatorDB.h
example_apps/animal_name_translator/double_buf_nested/: ANGeneratorDBN.cpp  ANGeneratorDBN.h  ANReceiverDBN.cpp  ANReceiverDBN.h  ANTranslatorDBN.cpp  ANTranslatorDBN.h
example_apps/animal_name_translator/single_buf/: ANGeneratorSB.cpp  (+5 more)
example_apps/convolution/: ConvExample.cpp  ConvExample.h  ConvLayer.cpp  ConvLayer.h  DataLayer.cpp  DataLayer.h  ImageWorker.cpp  ImageWorker.h  README.md  kernelsLib.h
example_apps/num_averager/: NumArrayAverager.cpp  NumArrayAverager.h  NumArrayGenerator.cpp  NumArrayGenerator.h  README.md
example_apps/simple/: README.md  SimpleExamples.cpp  SimpleExamples.h
(+16 files in other folders)
